	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1039, also in branches/0.5)
 * to ease reproducible builds: imposing LC_ALL=C to $(YACC) and $(SORT), vim2html.pl reads SOURCE_DATE_EPOCH
# (r1038, also in branches/0.5)
 * fix: when stdint.h is available use uint8_t, uint16_t, uint32_t instead of non-portable __u8, __u16, __u32
# (r1037, also in branches/0.5)
 * fix: ./configure --disable-pcx was not properly disabling PCX format support
# (r1036, also in branches/0.5)
 * fix: compilation was broken without framebuffer (FIM_WITH_NO_FRAMEBUFFER)
# (r1035)
 * introduced --mark-from-image-descriptions-file: read file names from a
   description file and use them to mark current list files.
# (r1030)
 * fix: introduced alphanumeric restriction in the shebang variables (must
   begin with underscore or alphabetic, continue with underscore or alphanumeric).
# (r1027)
 * Keys '(' and ')' are now bound respectively to "goto '^p'" and "goto '$p'";
   that is jump to first or last page.
# (r1026)
 * available symkeys are now documented in a section of man fimrc.
# (r1025,r1028)
 * fix: cleaned up the internal keysyms initialization code.
# (r1019)
# TODO: not yet active
 * support for glob fnmatch wordexp...
# (r1021)
 * switch -k --keysym-press <keysym> to execute simulated press of keysym at startup.
# (r1018)
 * added command line switch  -/  <pattern> as short for -c /<pattern>.
 * added command line switch --// <pattern> as short for -c /<pattern> with _re_search_opts='f'.
# (r1015)
 * will emit a status message when limiting long lists.
# (r1014)
 * Default key for 'scrollforward' is now space (' ') instead of 's'.
# (r1013)
 * introduced context prepend/append shebang syntax "#!fim:^=" and "#!fim:+=" in description files.
   (FIXME: undocumented)
# (r1011)
 * fix: removed obsolete documentation for the "window" command, now disabled.
# (r1010)
 * introduced the 'list "swap"' command.
# (r1009)